Reduced the height of the header to make sure the high-profile sales point `iOS + Android` is visible without scrolling.

--- a/html/res/css/baikal.css
+++ b/html/res/css/baikal.css
@@ -48,7 +48,7 @@ h3 {
 
 header#baikal-hero .container {
 	display: block;
-	padding: 100px 0;
+	padding: 50px 0 60px;
 	position: relative;
 }
 
